# Samogonki

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux.yaml  windows.yaml
Editor/: filesystem.cpp  iscreen_editor.cpp  iscreen_editor.h  itext_editor.cpp  itext_editor.h  light_font.cpp  light_font.h  main.cpp  main_screen.cpp  main_screen.h  regular_font.cpp  regular_font.h  scr_editor.cpp  scr_editor.h  screen.h  task.cpp  task.h  text_converter.cpp  text_converter.h
MechoSoma/: CMakeLists.txt
MechoSoma/XTool/: filesystem.cpp  itoa.cpp  port.cpp  xsound.cpp
MechoSoma/app/: main.cpp
MechoSoma/macOS/: Renderer.mm
